--- a/package.json
+++ b/package.json
@@ -12,14 +12,23 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.1.2",
+    "@angular/cdk": "^11.1.1",
     "@angular/common": "~10.1.2",
     "@angular/compiler": "~10.1.2",
     "@angular/core": "~10.1.2",
     "@angular/forms": "~10.1.2",
+    "@angular/material": "^11.1.1",
     "@angular/platform-browser": "~10.1.2",
     "@angular/platform-browser-dynamic": "~10.1.2",
     "@angular/router": "~10.1.2",
+    "angular-material": "^1.2.2",
+    "bootstrap": "^4.5.2",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.5.1",
+    "ngx-pagination": "^5.0.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^10.3.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
